<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
<string name="app_name">Maki Lite</string>
<string name="app_name_pro">Maki Pro</string>
<string name="app_name_about">Maki for Facebook </string>
<string name="prefs">Preferences</string>
<string name="settings">Settings</string>
<string name="helpfeed">Feedback</string>
<string name="bugs">Report A Bug</string>
<string name="news_feed_preferences">Home Screen Preference</string>
<string name="feed_choice">Facebook mode</string>
<string name="feed_choice_hint">Current: %s.</string>
    <string-array name="pref_default_feed">
        <item>Default</item>
        <item>Most Recent</item>
        <item>Top News</item>
        <item>Basic mode (Beta)</item>
    </string-array>
    <string name="choose_font_facebook">Facebook Font Size</string>
    <string name="choose_font_facebook_hint">Current font size: %s</string>
    <string-array name="font_choice">
        <item>Default Font</item>
        <item>Small Font</item>
        <item>Medium Font</item>
        <item>Large Font</item>
        <item>XLarge Font</item>
        <item>XXLarge Font</item>
    </string-array>
    <string name="messaging_clients">Messaging clients</string>
    <string name="choose_client_hint">Current client: %s</string>
    <string-array name="messages_choice">
        <item>Messages</item>
        <item>Facebook Touch Messages</item>
        <item>Facebook Basic Messages</item>
        <item>Facebook Desktop Messages</item>
        <item>Messenger (in Maki)</item>
        <item>Messenger App</item>
        <item>Messenger Lite App</item>
        <item>Disa Messenger</item>
    </string-array>
<string name="maki_source">Source code</string>
<string name="gifs">Play gifs in Maki</string>
<string name="gifs_summary">Play gifs inside Maki without browser</string>
<string name="play_intro">Play intro again</string>
<string name="maki_links">Open links in Maki</string>
<string name="maki_links_summary">Open links inside Maki without a browser</string>
<string name="first_twitter">Launch Twitter firstly</string>
<string name="reload_app">Please, reload app to apply changes</string>
<string name="title_centerTextPosts">Center the posts text</string>
<string name="summary_centerTextPosts">The text of each post will be centered</string>
<string name="title_addSpaceBetweenPosts">More space between posts</string>
<string name="title_hideSponsoredPosts">Don\'t show sponsored posts</string>
<string name="Maki_lock">Enable Maki Lock</string>
<string name="Maki_lock_about">Secure Maki with a smart passcode</string>
<string name="saved_pin_message">If you forget your pin, please clear Maki\'s data from your phones application manager.</string>
<string name="enable_location">Enable Location</string>
<string name="enable_location_hint">Allow location for Check-ins</string>
<string name="confirm_exit">Confirm exiting the app</string>
<string name="no_images">Disable Images</string>
<string name="no_images_hint">Reduce data usage by removing images.</string>
<string name="people_you">People You May Know</string>
<string name="people_you_hint">Hide people you may know.</string>
<string name="hide_news_feed">Hide News Feed</string>
<string name="hide_news_feed_description">To avoid sidetracking / procrastination.</string>
<string name="hide_editor_newsfeed_title">Hide Status editor in News Feed</string>
<string name="hide_editor_newsfeed_summary">When enabled, the status editor will be hidden on the News Feed.</string>
<string name="summary_pro">Requires Maki Pro.</string>
<string name="show_fab">Display a FAB</string>
<string name="jumpFAB">Display Jump to Top FAB</string>
<string name="lock_portrait">Lock to portrait</string>
<string name="lock_portrait_hint">Lock Maki in portrait mode</string>
<string name="hide_web">Hide WebView Loading</string>
<string name="hide_web_hint">Prevents default Facebook theme while page is loading. (Not recommended for Jelly Bean devices)</string>
<string name="extra_preferences">Extra preferences</string>
<string name="power">Power saving mode</string>
<string name="power_hint">Save battery power and traffic usage (beta)</string>
<string name="settings_more">More</string>
<string name="preference_category5">General</string>
<string name="clear_cache">Clear Data</string>
<string name="clear_cache_title">Are you sure?</string>
<string name="clear_cache_message">Tap OK to clear Maki\'s data. This will also log you out.</string>
<string name="clear_cache_description">Clear Maki\'s data. This will also log you out.</string>
    <string name="customize_Maki">Customize Maki</string>
    <string name="customize_Maki_hint">Change look and layout</string>
    <string name="choose_theme_Maki">Choose App Theme</string>
    <string name="choose_theme_facebook">Choose Facebook Theme</string>
    <string name="choose_theme_facebook_hint">Current theme: %s</string>
    <string name="choose_theme_Maki_hint">Current theme: %s</string>
    <string name="preference_category7">Customizations</string>
    <string name="preference_category4">Maki Themes</string>
    <string name="preference_category15">Maki Layout Settings</string>
    <string name="preference_facebook_layouts">Facebook Layout Settings</string>
    <string name="preference_category3">Facebook Themes</string>
    <string-array name="pref_theme_entries">
        <item>Maki Theme</item>
        <item>Maki Dark Theme</item>
        <item>Pink</item>
        <item>Dark</item>
        <item>Material Dark</item>
        <item>Falcon</item>
        <item>Light Blue</item>
        <item>Google+ Red</item>
    </string-array>
    <string-array name="pref_theme_fb_entries">
        <item>Facebook Theme</item>
        <item>Black Theme</item>
        <item>Dracula Theme</item>
        <item>Maki Theme</item>
        <item>Maki Classic</item>
    </string-array>
<string name="navigation_choice">Choose Navigation Style</string>
<string name="navigation_choice_hint">Current: %s.</string>
    <string-array name="pref_navigation_style">
        <item>Classic</item>
        <item>Top (4 items)</item>
        <item>Bottom (3 items)</item>
        <item>Bottom (4 items)</item>
    </string-array>
<string name="more_themes">Much more themes!</string>
<string name="more_themes_hint">Unlock all 58 Maki themes with Maki Pro. Click here to buy!</string>
<string name="more_navigation">New navigation styles</string>
<string name="more_navigation_hint">Unlock all 11 navigation styles with Maki Pro. Click here to buy!</string>
    <string name="tab_news">News</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_replies">Notifications</string>
    <string name="tab_menu">Menu</string>
    <string name="notifications">Notifications</string>
    <string name="interval_pref">Sync Interval</string>
    <string name="interval_pref_description">Current: %s.</string>
    <string-array name="update_interval">
        <item>Instant (High Battery &amp; Data Usage)</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="update_interval_values">
        <item>5000</item>
        <item>60000</item>
        <item>300000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>21600000</item>
    </string-array>
    <string name="you_have_one_message">You have 1 new message</string>
    <string name="you_have_n_messages">You have %d new messages</string>
    <string name="activate_notifications">Facebook Notifications</string>
    <string name="activate_messages">Message Notifications</string>
    <string name="notifications_settings">Notifications</string>
    <string name="all_notifications">View Notifications</string>
    <string name="all_messages">View Messages</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="notification_sound_description">Current: \u0020</string>
    <string name="message_sound">Message Notification Sound</string>
    <string name="message_sound_description">Current: \u0020</string>
    <string name="silent">No Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="led_light">Notification LED</string>
    <string name="notifications_everywhere">Always Be Notified</string>
    <string name="notifications_everywhere_description">Even when you\'re using Maki.</string>
    <string name="quick_bar">QuickBar</string>
    <string name="quick_bar_hint">Show Maki\'s Notification QuickBar to open a floating window for your favorite network.</string>
    <string name="quick_bar_on">Maki QuickBar is now on.</string>
<string name="share_action">Share current page</string>
<string name="share_action_subject">Facebook page</string>
<string name="success">Success</string>
<string name="error">Error</string>
<string name="update_share">Share Now</string>
<string name="share_link">Share the link</string>
<string name="crash_toast_text">Something is wrong.</string>
<string name="crash_dialog_title">Maki Lite has crashed</string>
<string name="crash_dialog_text">Unfortunately Maki Lite has stopped. Please tap OK to send this report via email.</string>
<string name="crash_dialog_comment_prompt">You can leave comments about this crash here:</string>
<string name="telegram_channel">Telegram channel</string>
<string name="donate">Donate</string>
<string name="like_on">Like on Facebook</string>
<string name="join_on">Google+</string>
<string name="follow_on">Follow On Twitter</string>
<string name="credits_settings">Credits</string>
<string name="credits_licenses">Tap here to read more about the licences used in Maki</string>
<string name="credits_licenses_description">Open source software licenses</string>
<string name="preference_category6">Credits</string>
<string name="credits_all">And all!</string>
<string name="credits_all_description">Maki also using FaceSlim, Toffeed, Tinfoil and SlimSocial source codes. Thank you, developers!</string>
<string name="credits_friends">Family and friends</string>
<string name="credits_friends_description">For supporting with Maki developing</string>
<string name="credits_you">You</string>
<string name="credits_you_description">For downloading Maki Lite. Thank you!</string>
<string name="preference_category10">Open Source Software Used</string>
<string name="preference_category8">Open Source Licenses</string>
<string name="credits_jorell">Jorell Rutledge</string>
<string name="credits_jorell_description">Maki based on Folio by Creative Trends. Thank you so much! Don\'t forget to download Jorell\'s new amazing app - Simplicity Browser</string>
<string name="help_trans">Help Translate</string>
<string name="twitter">Twitter</string>
<string name="switch_to_Maki">Switch to Facebook</string>
<string name="quickaccess">Quick Access</string>
<string name="home">Home</string>
<string name="search_twitter">Search</string>
<string name="more">More</string>
<string name="myprofile">Account</string>
<string name="jumpto">Jump to top</string>
<string name="menu_forward">Forward</string>
<string name="menu_refresh">Reload</string>
<string name="go_pro">Get Maki Pro</string>
<string name="title_activity_about">About</string>
<string name="preference_donate_category">Purchase Maki Pro</string>
<string name="faved">Favorites</string>
<string name="messages">Messages</string>
<string name="open_in">Open in Browser</string>
<string name="context_save_image">Download Image</string>
<string name="context_share_image">Share Image</string>
<string name="context_copy_image_link">Copy link</string>
<string name="context_share_link">Share link</string>
<string name="what_new">What\'s new</string>
</resources>