<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Copyright (C) 2016-2017  Roman Savchyn/Sunshine Apps
        Code taken from:
        - Folio for Facebook by creativetrendsapps. Thank you!
        - Simple for Facebook by creativetrendsapps. Thank you!
        - FaceSlim by indywidualny. Thank you!
        - Toffed by JakeLane. Thank you!
        - SlimSocial by  Leonardo Rignanese. Thank you!
        - MaterialFBook by ZeeRooo. Thank you!
        - Simplicity by creativetrendsapps. Thank you!
        Copyright notice must remain here if you're using any part of this code.
        -->
    
    <com.sunshine.makilite.preferences.PreferenceCategory
        android:title="@string/preference_category5">

        <Preference
			android:key="notifications_settings"
            android:title="@string/notifications_settings"/>

        <com.sunshine.makilite.preferences.ListPreferenceCompat
            android:id="@+id/chooseMessages"
            android:entries="@array/messages_choice"
            android:entryValues="@array/messages_pref"
            android:key="messages_pref"
            android:summary="@string/choose_client_hint"
            android:title="@string/messaging_clients"
            android:defaultValue="default_message"/>

        <com.sunshine.makilite.preferences.SwitchPreferenceCompat
            android:key="allow_inside"
            android:title="@string/maki_links"
            android:summary="@string/maki_links_summary"
            android:defaultValue="true"/>

     <com.sunshine.makilite.preferences.SwitchPreferenceCompat
            android:key="maki_locker"
            android:title="@string/Maki_lock"
            android:summary="@string/Maki_lock_about"
            android:defaultValue="false"/>

        <com.sunshine.makilite.preferences.SwitchPreferenceCompat
            android:key="allow_location"
            android:title="@string/enable_location"
            android:summary="@string/enable_location_hint"/>

        <com.sunshine.makilite.preferences.SwitchPreferenceCompat
            android:key="first_twitter"
            android:title="@string/first_twitter"
            android:defaultValue="false"/>

        <com.sunshine.makilite.preferences.SwitchPreferenceCompat
            android:key="confirm_exit"
            android:title="@string/confirm_exit"
            android:defaultValue="true"/>

    </com.sunshine.makilite.preferences.PreferenceCategory>

    <com.sunshine.makilite.preferences.PreferenceCategory
        android:title="@string/preference_category7">
        
        <Preference            
            android:key="custom_settings"
            android:title="@string/customize_Maki"
            android:summary="@string/customize_Maki_hint"/>

        <com.sunshine.makilite.preferences.ListPreferenceCompat
        	android:id="@+id/relativeLayoutChooseFont"
            android:entries="@array/font_choice"
            android:entryValues="@array/font_pref"
            android:key="font_pref"
            android:summary="@string/choose_font_facebook_hint"
            android:title="@string/choose_font_facebook"
            android:defaultValue="default_font"/>

     </com.sunshine.makilite.preferences.PreferenceCategory>

    <com.sunshine.makilite.preferences.PreferenceCategory
        android:title="@string/news_feed_preferences">

        <ListPreference
            android:id="@+id/relativeLayoutChooseFeed"
            android:entries="@array/pref_default_feed"
            android:entryValues="@array/pref_feed"
            android:key="news_feed"
            android:summary="@string/feed_choice_hint"
            android:title="@string/feed_choice"
            android:defaultValue="default_news"/>

        </com.sunshine.makilite.preferences.PreferenceCategory>

    <com.sunshine.makilite.preferences.PreferenceCategory
        android:title="@string/extra_preferences">

        <com.sunshine.makilite.preferences.SwitchPreferenceCompat
            android:key="play_gifs"
            android:title="@string/gifs"
            android:summary="@string/gifs_summary"/>

        <com.sunshine.makilite.preferences.SwitchPreferenceCompat
            android:key="power_save"
            android:title="@string/power"
            android:summary="@string/power_hint"/>

    </com.sunshine.makilite.preferences.PreferenceCategory>

    <com.sunshine.makilite.preferences.PreferenceCategory
        android:title="@string/settings_more">

        <Preference
            android:key="about_settings"
            android:title="@string/title_activity_about"/>

        <Preference
            android:key="credits_settings"
            android:title="@string/credits_settings"/>

        <Preference
            android:key="help_development"
            android:title="@string/preference_donate_category"/>

        <Preference
            android:key="play_intro"
            android:title="@string/play_intro"/>

        <Preference
            android:key="whats_new"
            android:title="@string/what_new"/>

        <Preference
            android:key="help_translate"
            android:title="@string/help_trans"/>

        <Preference
            android:key="clear"
            android:title="@string/clear_cache"
            android:summary="@string/clear_cache_description"/>

        <Preference
            android:key="maki_source"
            android:title="@string/maki_source"/>

      </com.sunshine.makilite.preferences.PreferenceCategory>
     
    

</PreferenceScreen>