<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Copyright (C) 2016-2017  Roman Savchyn/Sunshine Apps
        Code taken from:
        - Folio for Facebook by creativetrendsapps. Thank you!
        - Simple for Facebook by creativetrendsapps. Thank you!
        - FaceSlim by indywidualny. Thank you!
        - Toffed by JakeLane. Thank you!
        - SlimSocial by  Leonardo Rignanese. Thank you!
        - MaterialFBook by ZeeRooo. Thank you!
        - Simplicity by creativetrendsapps. Thank you!
        Copyright notice must remain here if you're using any part of this code.
        -->

    <com.sunshine.makilite.preferences.PreferenceCategory
        android:title="@string/preference_category6">

        <Preference
            android:key="jorell"
            android:selectable="false"
            android:title="@string/credits_jorell"
            android:summary="@string/credits_jorell_description"/>



        <Preference
            android:key="all"
            android:selectable="false"
            android:title="@string/credits_all"
            android:summary="@string/credits_all_description"/>

        <Preference
            android:key="frineds"
            android:selectable="false"
            android:title="@string/credits_friends"
            android:summary="@string/credits_friends_description"/>


        <Preference
            android:title="@string/credits_you"
            android:selectable="false"
            android:summary="@string/credits_you_description"
         />

    </com.sunshine.makilite.preferences.PreferenceCategory>



    <com.sunshine.makilite.preferences.PreferenceCategory
        android:title="@string/preference_category8">

        <Preference
            android:key="about"
            android:summary="@string/credits_licenses"
            android:title="@string/credits_licenses_description" />



    </com.sunshine.makilite.preferences.PreferenceCategory>

</PreferenceScreen>