<?xml version="1.0" encoding="utf-8"?>
<!--Copyright (C) 2016-2017  Roman Savchyn/Sunshine Apps
    Code taken from:
    - Folio for Facebook by creativetrendsapps. Thank you!
    - Simple for Facebook by creativetrendsapps. Thank you!
    - FaceSlim by indywidualny. Thank you!
    - Toffed by JakeLane. Thank you!
    - SlimSocial by  Leonardo Rignanese. Thank you!
    - MaterialFBook by ZeeRooo. Thank you!
    Copyright notice must remain here if you're using any part of this code.
    -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/tab_news"
        android:icon="@drawable/newspaper" />

    <item
        android:title="@string/tab_friends"
        android:icon="@drawable/account" />

    <item
        android:title="@string/tab_replies"
        android:icon="@drawable/earth" />

    <item
        android:title="@string/tab_menu"
        android:icon="@drawable/menu" />

</menu>